...
        android:layout_marginTop="25sp"
        android:text="@string/update_steps"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <Button
        android:id="@+id/startBtn"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/btn_rounded"
        android:drawableStart="@drawable/ic_home_white_24dp"
        android:drawablePadding="5dp"
...
