...
            android:text="@string/default_zero_miles"
            android:textColor="@color/colorAccent"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/startStopContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:orientation="vertical">

        <Button
...
            android:visibility="gone"
            android:text="@string/endWalkLabel"
            android:textColor="@color/colorText"
            android:textSize="20sp" />

        <Button
            android:id="@+id/startWalkMaterial"
            android:layout_width="350sp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="15sp"
            android:background="@drawable/btn_rounded"
            android:drawableStart="@drawable/ic_add_white_24dp"
...
            android:paddingRight="40dp"
            android:text="@string/startWalkLabel"
            android:textColor="@color/colorText"
            android:textSize="20sp" />

        <Button
            android:id="@+id/doneWalkBtn"
            android:layout_width="350sp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:background="@drawable/btn_rounded"
            android:visibility="gone"
            android:drawableStart="@drawable/ic_check_white_24dp"
            android:drawablePadding="5dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="Done"
            android:textColor="@color/colorText"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="20sp"
...
